Testing fixes